[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Menus/Pause/main_menu.png" type="Texture" id=1]
[ext_resource path="res://Assets/Menus/Pause/continue.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menus/MainMenu/menu_background.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menus/Pause/options.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Interface/Menus/PauseMenu/PauseMenu.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Interface/Menus/SelectButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Menus/Pause/music.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menus/Pause/sound.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menus/Pause/on.png" type="Texture" id=9]
[ext_resource path="res://Assets/Menus/Pause/off.png" type="Texture" id=10]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 480, 240 )
margin_left = 22.0
margin_right = 26.0
margin_top = 22.0
margin_bottom = 27.0102

[node name="PauseMenu" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MC" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 20
custom_constants/margin_left = 25

[node name="VBC" type="VBoxContainer" parent="Panel/MC"]
margin_left = 25.0
margin_top = 20.0
margin_right = 400.0
margin_bottom = 196.0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="Panel/MC/VBC"]
margin_left = 107.0
margin_right = 267.0
margin_bottom = 32.0
size_flags_horizontal = 4
texture = ExtResource( 4 )

[node name="VBC" type="VBoxContainer" parent="Panel/MC/VBC"]
margin_top = 36.0
margin_right = 375.0
margin_bottom = 176.0

[node name="Continue" parent="Panel/MC/VBC/VBC" instance=ExtResource( 6 )]
margin_right = 160.0
margin_bottom = 32.0
texture_normal = ExtResource( 2 )

[node name="Music" parent="Panel/MC/VBC/VBC" instance=ExtResource( 6 )]
margin_top = 36.0
margin_right = 160.0
margin_bottom = 68.0
texture_normal = ExtResource( 7 )

[node name="Music_on" type="TextureRect" parent="Panel/MC/VBC/VBC/Music"]
anchor_left = 0.612
anchor_right = 0.862
anchor_bottom = 0.682
margin_left = 3.07999
margin_right = 6.07999
margin_bottom = 5.176
texture = ExtResource( 9 )
expand = true
stretch_mode = 3

[node name="Music_off" type="TextureRect" parent="Panel/MC/VBC/VBC/Music"]
visible = false
anchor_left = 0.612
anchor_right = 0.862
anchor_bottom = 0.682
margin_left = 3.07999
margin_right = 6.07999
margin_bottom = 5.176
texture = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="Sound" parent="Panel/MC/VBC/VBC" instance=ExtResource( 6 )]
margin_top = 72.0
margin_right = 160.0
margin_bottom = 104.0
texture_normal = ExtResource( 8 )

[node name="Sound_on" type="TextureRect" parent="Panel/MC/VBC/VBC/Sound"]
anchor_left = 0.612
anchor_right = 0.862
anchor_bottom = 0.682
margin_left = -2.92001
margin_right = 0.0799866
margin_bottom = 5.176
texture = ExtResource( 9 )
expand = true
stretch_mode = 3

[node name="Sound_off" type="TextureRect" parent="Panel/MC/VBC/VBC/Sound"]
visible = false
anchor_left = 0.612
anchor_right = 0.862
anchor_bottom = 0.682
margin_left = -2.92001
margin_right = 0.0799866
margin_bottom = 5.176
texture = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="MainMenu" parent="Panel/MC/VBC/VBC" instance=ExtResource( 6 )]
margin_top = 108.0
margin_right = 160.0
margin_bottom = 140.0
texture_normal = ExtResource( 1 )

[connection signal="about_to_show" from="." to="." method="_on_PauseMenu_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_PauseMenu_popup_hide"]
[connection signal="pressed" from="Panel/MC/VBC/VBC/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Panel/MC/VBC/VBC/Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="Panel/MC/VBC/VBC/Sound" to="." method="_on_Sound_pressed"]
[connection signal="pressed" from="Panel/MC/VBC/VBC/MainMenu" to="." method="_on_MainMenu_pressed"]
